// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The logos should render the Slack logo 1`] = `
<div
  className="gatsby-image-wrapper"
  data-gatsby-image-wrapper=""
  style={
    Object {
      "backgroundColor": undefined,
      "height": 24,
      "overflow": "hidden",
      "position": "relative",
      "width": 24,
    }
  }
>
  <div
    aria-hidden={true}
    data-placeholder-image=""
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <picture>
    <source
      data-srcset="/static/6b04981d71d140833cb93793287c6a38/4e704/slack_icon.webp 24w,/static/6b04981d71d140833cb93793287c6a38/e78b1/slack_icon.webp 48w"
      sizes="24px"
      type="image/webp"
    />
    <img
      alt="Slack"
      data-gatsby-image-ssr=""
      data-main-image=""
      data-src="/static/6b04981d71d140833cb93793287c6a38/2391d/slack_icon.png"
      data-srcset="/static/6b04981d71d140833cb93793287c6a38/2391d/slack_icon.png 24w,/static/6b04981d71d140833cb93793287c6a38/fcdb9/slack_icon.png 48w"
      decoding="async"
      loading="lazy"
      onLoad={[Function]}
      sizes="24px"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "100%",
          "left": 0,
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "opacity 250ms linear",
          "width": "100%",
          "willChange": "opacity",
        }
      }
      tw="mr-2 h-8"
    />
  </picture>
  <noscript>
    <picture>
      <source
        sizes="24px"
        srcSet="/static/6b04981d71d140833cb93793287c6a38/4e704/slack_icon.webp 24w,/static/6b04981d71d140833cb93793287c6a38/e78b1/slack_icon.webp 48w"
        type="image/webp"
      />
      <img
        alt="Slack"
        data-gatsby-image-ssr=""
        data-main-image=""
        decoding="async"
        loading="lazy"
        onLoad={[Function]}
        sizes="24px"
        src="/static/6b04981d71d140833cb93793287c6a38/2391d/slack_icon.png"
        srcSet="/static/6b04981d71d140833cb93793287c6a38/2391d/slack_icon.png 24w,/static/6b04981d71d140833cb93793287c6a38/fcdb9/slack_icon.png 48w"
        style={
          Object {
            "backgroundColor": undefined,
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": "translateZ(0)",
            "transition": "opacity 250ms linear",
            "width": "100%",
            "willChange": "opacity",
          }
        }
        tw="mr-2 h-8"
      />
    </picture>
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t){e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\"));const t=e.parentNode.querySelectorAll(\\"source[data-srcset]\\");for(let e of t)e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\");e.complete&&(e.style.opacity=1)}}",
      }
    }
    type="module"
  />
</div>
`;

exports[`The logos should render the Twitter logo 1`] = `
<div
  className="gatsby-image-wrapper"
  data-gatsby-image-wrapper=""
  style={
    Object {
      "backgroundColor": undefined,
      "height": 24,
      "overflow": "hidden",
      "position": "relative",
      "width": 24,
    }
  }
>
  <div
    aria-hidden={true}
    data-placeholder-image=""
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <picture>
    <source
      data-srcset="/static/9102af32fe26d52fd80240f7ebdaf365/4e704/twitter.webp 24w,/static/9102af32fe26d52fd80240f7ebdaf365/e78b1/twitter.webp 48w"
      sizes="24px"
      type="image/webp"
    />
    <img
      alt="Slack"
      data-gatsby-image-ssr=""
      data-main-image=""
      data-src="/static/9102af32fe26d52fd80240f7ebdaf365/2391d/twitter.png"
      data-srcset="/static/9102af32fe26d52fd80240f7ebdaf365/2391d/twitter.png 24w,/static/9102af32fe26d52fd80240f7ebdaf365/fcdb9/twitter.png 48w"
      decoding="async"
      loading="lazy"
      onLoad={[Function]}
      sizes="24px"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "100%",
          "left": 0,
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "opacity 250ms linear",
          "width": "100%",
          "willChange": "opacity",
        }
      }
      tw="mr-2 h-8"
    />
  </picture>
  <noscript>
    <picture>
      <source
        sizes="24px"
        srcSet="/static/9102af32fe26d52fd80240f7ebdaf365/4e704/twitter.webp 24w,/static/9102af32fe26d52fd80240f7ebdaf365/e78b1/twitter.webp 48w"
        type="image/webp"
      />
      <img
        alt="Slack"
        data-gatsby-image-ssr=""
        data-main-image=""
        decoding="async"
        loading="lazy"
        onLoad={[Function]}
        sizes="24px"
        src="/static/9102af32fe26d52fd80240f7ebdaf365/2391d/twitter.png"
        srcSet="/static/9102af32fe26d52fd80240f7ebdaf365/2391d/twitter.png 24w,/static/9102af32fe26d52fd80240f7ebdaf365/fcdb9/twitter.png 48w"
        style={
          Object {
            "backgroundColor": undefined,
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": "translateZ(0)",
            "transition": "opacity 250ms linear",
            "width": "100%",
            "willChange": "opacity",
          }
        }
        tw="mr-2 h-8"
      />
    </picture>
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t){e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\"));const t=e.parentNode.querySelectorAll(\\"source[data-srcset]\\");for(let e of t)e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\");e.complete&&(e.style.opacity=1)}}",
      }
    }
    type="module"
  />
</div>
`;

exports[`The logos should render the Vddd logo 1`] = `
<div
  className="gatsby-image-wrapper"
  data-gatsby-image-wrapper=""
  style={
    Object {
      "backgroundColor": undefined,
      "height": 32,
      "overflow": "hidden",
      "position": "relative",
      "width": 135,
    }
  }
>
  <div
    aria-hidden={true}
    data-placeholder-image=""
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <picture>
    <source
      data-srcset="/static/a1a17b228142a711010aff197345ee4b/45989/vddd_logo_tp.webp 135w,/static/a1a17b228142a711010aff197345ee4b/20969/vddd_logo_tp.webp 270w"
      sizes="135px"
      type="image/webp"
    />
    <img
      alt="Virtual DDD"
      data-gatsby-image-ssr=""
      data-main-image=""
      data-src="/static/a1a17b228142a711010aff197345ee4b/aff94/vddd_logo_tp.png"
      data-srcset="/static/a1a17b228142a711010aff197345ee4b/aff94/vddd_logo_tp.png 135w,/static/a1a17b228142a711010aff197345ee4b/046af/vddd_logo_tp.png 270w"
      decoding="async"
      loading="lazy"
      onLoad={[Function]}
      sizes="135px"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "100%",
          "left": 0,
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "opacity 250ms linear",
          "width": "100%",
          "willChange": "opacity",
        }
      }
      tw="object-contain mr-2 h-8"
    />
  </picture>
  <noscript>
    <picture>
      <source
        sizes="135px"
        srcSet="/static/a1a17b228142a711010aff197345ee4b/45989/vddd_logo_tp.webp 135w,/static/a1a17b228142a711010aff197345ee4b/20969/vddd_logo_tp.webp 270w"
        type="image/webp"
      />
      <img
        alt="Virtual DDD"
        data-gatsby-image-ssr=""
        data-main-image=""
        decoding="async"
        loading="lazy"
        onLoad={[Function]}
        sizes="135px"
        src="/static/a1a17b228142a711010aff197345ee4b/aff94/vddd_logo_tp.png"
        srcSet="/static/a1a17b228142a711010aff197345ee4b/aff94/vddd_logo_tp.png 135w,/static/a1a17b228142a711010aff197345ee4b/046af/vddd_logo_tp.png 270w"
        style={
          Object {
            "backgroundColor": undefined,
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transform": "translateZ(0)",
            "transition": "opacity 250ms linear",
            "width": "100%",
            "willChange": "opacity",
          }
        }
        tw="object-contain mr-2 h-8"
      />
    </picture>
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t){e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\"));const t=e.parentNode.querySelectorAll(\\"source[data-srcset]\\");for(let e of t)e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\");e.complete&&(e.style.opacity=1)}}",
      }
    }
    type="module"
  />
</div>
`;
